--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="script12.js"></script>
+    <script src="script.js"></script>
     
 
 </body>
