--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     const formData = new FormData(form);
     const data = Object.fromEntries(formData.entries());
 
-    fetch("https://mersidd00.app.n8n.cloud/webhook/8df69e01-69eb-4668-a60b-e37df0fb167b", {
+    fetch("https://morata44.app.n8n.cloud/webhook/order", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify(data),
