--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="logo-icons">
             <img src="images/menu.png" alt="قائمة" class="icon">
-            <img src="images/logo.png" alt="لوجو المتجر" class="logo">
+            <img src="images/logo.png" alt="" class="logo">
             <div class="icons">
                 <img src="images/search.png" alt="بحث" class="icon">
                 <img src="images/cart.png" alt="سلة" class="icon">
